--- a/arch/arm/configs/wpk_defconfig
+++ b/arch/arm/configs/wpk_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-WhitePugKernel"
+CONFIG_LOCALVERSION="-WhitePugKernel-V1"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -218,12 +218,17 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_ZEN=y
+# CONFIG_CGROUP_BFQIO is not set
 CONFIG_IOSCHED_FIOPS=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_FIOPS is not set
 CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_ZEN is not set
 CONFIG_DEFAULT_IOSCHED="noop"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
@@ -518,6 +523,7 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 # CONFIG_USE_DEV_CTRL_VOLUME is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_MSM_UARTDM_Core_v14 is not set
 # CONFIG_MSM_COMMON_LOG is not set
 # CONFIG_MSM_BOOT_STATS is not set
@@ -3150,11 +3156,13 @@ CONFIG_FUSE_FS=y
 # DOS/FAT/NT Filesystems
 #
 CONFIG_FAT_FS=y
-# CONFIG_MSDOS_FS is not set
+CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
-# CONFIG_NTFS_FS is not set
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
 
 #
 # Pseudo filesystems
