--- a/arch/arm/configs/wpk_defconfig
+++ b/arch/arm/configs/wpk_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-WhitePugKernel-V1"
+CONFIG_LOCALVERSION="-WhitePugKernel-V2"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -770,6 +770,7 @@ CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_DEDUCE_WAKEUP_REASONS=y
 CONFIG_PARTIALRESUME=y
+CONFIG_PM_SYNC_BEFORE_SUSPEND=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_NET=y
